terraform-environments/aws/dev/helm/istio-networking/gateway.tpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring
  namespace: monitoring
spec:
  selector:
    # use Istio default gateway implementation
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: domain-wildcard # This should match the Certificate secretName
    hosts:
    - "*" # This should match a DNS name in the Certificate
