terraform-environments/aws/dev/helm/istio-networking/virtualservice.tpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
spec:
  hosts:
  - "grafana-istio.dev.k8s.managedkube.com"
  gateways:
  - monitoring
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kube-prometheus-stack-grafana
